--- a/Bagian D/Eksperimen.ipynb
+++ b/Bagian D/Eksperimen.ipynb
@@ -36,18 +36,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 2,
    "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (id3.py, line 20)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"C:\\Users\\garda\\Development\\ML\\tubes-1-ml\\Bagian D\\clf\\id3.py\"\u001b[0;36m, line \u001b[0;32m20\u001b[0m\n\u001b[0;31m    self.tree: Node = None\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import DTL Classifier\n",
     "from clf.mlp import MyMlp\n",
@@ -58,7 +49,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -81,7 +72,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,13 +91,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "#Function to Extract Input and Output\n",
     "\n",
-    "def extract_feature_target(dataframe, target_column):\n",
+    "def extract_feature_target(data, output):\n",
     "    y = data[output]\n",
     "    x = data.drop(output, axis=1)\n",
     "    #print(x.columns) #optional\n",
@@ -116,7 +107,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -135,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -250,7 +241,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "# Test"
+    "# Testing Cross Validate"
    ]
   },
   {
@@ -262,6 +253,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "Import Berhasil\n",
       "Banyaknya baris dan kolom (150, 5)\n",
       "Banyaknya data duplicate 3\n"
      ]
@@ -273,7 +265,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -306,7 +298,7 @@
        "  </thead>\n",
        "  <tbody>\n",
        "    <tr>\n",
-       "      <th>0</th>\n",
+       "      <td>0</td>\n",
        "      <td>5.1</td>\n",
        "      <td>3.5</td>\n",
        "      <td>1.4</td>\n",
@@ -314,7 +306,7 @@
        "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>1</th>\n",
+       "      <td>1</td>\n",
        "      <td>4.9</td>\n",
        "      <td>3.0</td>\n",
        "      <td>1.4</td>\n",
@@ -322,7 +314,7 @@
        "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>2</th>\n",
+       "      <td>2</td>\n",
        "      <td>4.7</td>\n",
        "      <td>3.2</td>\n",
        "      <td>1.3</td>\n",
@@ -330,7 +322,7 @@
        "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>3</th>\n",
+       "      <td>3</td>\n",
        "      <td>4.6</td>\n",
        "      <td>3.1</td>\n",
        "      <td>1.5</td>\n",
@@ -338,7 +330,7 @@
        "      <td>setosa</td>\n",
        "    </tr>\n",
        "    <tr>\n",
-       "      <th>4</th>\n",
+       "      <td>4</td>\n",
        "      <td>5.0</td>\n",
        "      <td>3.6</td>\n",
        "      <td>1.4</td>\n",
@@ -358,7 +350,7 @@
        "4           5.0           3.6            1.4           0.2   setosa"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -369,67 +361,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 10,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
-    "x, y = extract_input_output(df, ' species')"
+    "x, y = extract_feature_target(df, ' species')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "from sklearn.pipeline import Pipeline\n",
-    "# from sklearn.impute import SimpleImputer\n",
-    "from sklearn.preprocessing import LabelBinarizer\n",
-    "from sklearn.preprocessing import StandardScaler, OneHotEncoder\n",
-    "from sklearn.pipeline import FeatureUnion\n",
-    "\n",
-    "num_attribs = list(x)\n",
-    "\n",
-    "\n",
-    "preprocessor = Pipeline([\n",
-    "    # ('selector', DataFrameSelector(num_attribs)),\n",
-    "#     ('imputer', SimpleImputer(strategy=\"median\")),\n",
-    "    # ('attribs_adder', CombinedAttributesAdder()),\n",
-    "    ('std_scaler', StandardScaler()),\n",
-    "  ])\n",
-    "\n",
-    "# cat_pipeline = Pipeline([\n",
-    "#     ('selector', DataFrameSelector(cat_attribs)),\n",
-    "#     ('label_binarizer', MyLabelBinarizer()),\n",
-    "#   ])\n",
-    "\n",
-    "# preprocessor = FeatureUnion(transformer_list=[\n",
-    "#     (\"num_pipeline\", num_pipeline),\n",
-    "#     (\"cat_pipeline\", cat_pipeline),\n",
-    "#   ])"
-   ]
-  },
-  {
-   "cell_type": "markdown",
-   "metadata": {},
-   "source": [
-    "# Machine Learning Pipeline"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "ename": "SyntaxError",
-     "evalue": "invalid syntax (id3.py, line 20)",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;36m  File \u001b[0;32m\"C:\\Users\\garda\\Development\\ML\\tubes-1-ml\\Bagian D\\clf\\id3.py\"\u001b[0;36m, line \u001b[0;32m20\u001b[0m\n\u001b[0;31m    self.tree: Node = None\u001b[0m\n\u001b[0m             ^\u001b[0m\n\u001b[0;31mSyntaxError\u001b[0m\u001b[0;31m:\u001b[0m invalid syntax\n"
-     ]
-    }
-   ],
    "source": [
     "from clf.mlp import MyMlp\n",
     "from clf.c45 import C45\n",
@@ -439,31 +382,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
-   "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "4\n",
-      "3\n",
-      "[4, 3]\n"
-     ]
-    }
-   ],
-   "source": [
-    "input_layer = len(list(x))\n",
-    "print(input_layer)\n",
-    "output_layer = len(set(y))\n",
-    "print(output_layer)\n",
-    "hidden_layer = [4, 3]\n",
-    "print(hidden_layer)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -474,216 +393,50 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "[['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['<= 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n",
-      " ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']]\n",
-      "---------------------------------\n",
-      "<clf.c45.C45 object at 0x0000010535429080>\n",
-      "-----------------------------------\n",
-      "fit_time  mean  0.012400388717651367\n",
-      "fit_time  std  0.0023318276698441483\n",
-      "score_time  mean  0.0008001327514648438\n",
-      "score_time  std  0.0004000684217507532\n",
+      "fit_time  mean  0.007890748977661132\n",
+      "fit_time  std  0.002112867026693262\n",
+      "score_time  mean  0.0005492210388183594\n",
+      "score_time  std  0.00010013155701126581\n",
       "test_score  mean  0.3820689655172414\n",
       "test_score  std  0.3811641221186584\n",
-      "{'fit_time': array([0.01599956, 0.01299953, 0.01100302, 0.01299977, 0.00900006]), 'score_time': array([0.0010016 , 0.0010016 , 0.00099874, 0.00099874, 0.        ]), 'test_score': array([1.        , 0.6       , 0.        , 0.31034483, 0.        ])}\n"
+      "{'fit_time': array([0.01111913, 0.00970721, 0.0064857 , 0.00609159, 0.00605011]), 'score_time': array([0.00049376, 0.00054407, 0.00074387, 0.00049114, 0.00047326]), 'test_score': array([1.        , 0.6       , 0.        , 0.31034483, 0.        ])}\n"
      ]
     }
    ],
    "source": [
-    "from sklearn.linear_model import LogisticRegression\n",
-    "pipeline = Pipeline([\n",
-    "    # ('processor', preprocessor), #Step1 - preprocess data\n",
-    "    ('clf', LogisticRegression()) #step2 - classifier (default : LogisticRegression )\n",
+    "from sklearn.model_selection import cross_validate\n",
+    "\n",
+    "model = Pipeline([\n",
+    "    ('clf', myc45) #step2 - classifier (default : LogisticRegression )\n",
     "])\n",
     "\n",
-    "from sklearn.model_selection import cross_validate\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.linear_model import LogisticRegression\n",
-    "from sklearn.svm import SVC\n",
-    "from sklearn.neighbors import KNeighborsClassifier\n",
-    "from sklearn.tree import DecisionTreeClassifier\n",
-    "from sklearn.ensemble import RandomForestClassifier, GradientBoostingClassifier\n",
-    "\n",
-    "clfs = []\n",
-    "# clfs.append(myclf)\n",
-    "clfs.append(myc45)\n",
-    "# clfs.append(SVC())\n",
-    "# clfs.append(KNeighborsClassifier(n_neighbors=3))\n",
-    "# clfs.append(DecisionTreeClassifier())\n",
-    "# clfs.append(RandomForestClassifier())\n",
-    "# clfs.append(GradientBoostingClassifier())\n",
-    "\n",
-    "for classifier in clfs:\n",
-    "    pipeline.set_params(clf = classifier)\n",
-    "    x_temp = process_numeric(np.vectorize(str)(x.values), y.values)\n",
-    "    print(x_temp)\n",
-    "    scores = cross_validate(pipeline, x_temp, y.values, cv=5, scoring='accuracy')\n",
-    "    print('---------------------------------')\n",
-    "    print(str(classifier))\n",
-    "    print('-----------------------------------')\n",
-    "    for key, values in scores.items():\n",
-    "            print(key,' mean ', values.mean())\n",
-    "            print(key,' std ', values.std())\n",
-    "    print(scores)"
+    "x_temp = process_numeric(np.vectorize(str)(x.values), y.values)\n",
+    "scores = cross_validate(model, x_temp, y.values, cv=5, scoring='accuracy')\n",
+    "for key, values in scores.items():\n",
+    "        print(key,' mean ', values.mean())\n",
+    "        print(key,' std ', values.std())\n",
+    "print(scores)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
   "anaconda-cloud": {},
   "kernelspec": {
-   "display_name": "Python [default]",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
@@ -697,7 +450,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.5.2"
+   "version": "3.7.4"
   }
  },
  "nbformat": 4,
