--- a/Bagian D/Eksperimen.ipynb
+++ b/Bagian D/Eksperimen.ipynb
@@ -2,7 +2,9 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Tugas Besar 1 - Bagian D \n",
     "\n",
@@ -15,14 +17,16 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "## I. Import Library Standar dan Classifier"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 252,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -36,7 +40,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 253,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -49,7 +53,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 254,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -58,14 +62,16 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "## II. Mendefinisikan Fungsi Bantuan "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 255,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -84,7 +90,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 256,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -100,12 +106,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 257,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
     "#function to split train test data (default test_size = 0.4)\n",
     "from sklearn.model_selection import train_test_split\n",
+    "from sklearn.pipeline import Pipeline\n",
     "\n",
     "def train_test_data(x,y, _test_size = 0.4): \n",
     "    x_train, x_test, y_train, y_test = train_test_split(x,y, test_size =_test_size,\n",
@@ -119,7 +126,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 258,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -134,58 +141,54 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Bagian 1 : Eksperimen Skema Hold-out Validation"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "## 1.1 Pembelajaran DTL"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "## 1.2 Pembelajaran ANN"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Bagian 2 : Eksperimen Skema 10-fold Cross Validation"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "## 2.1 Pembelajaran DTL"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 259,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "Import Berhasil\nBanyaknya baris dan kolom (150, 5)\nBanyaknya data duplicate 3\n"
-    },
-    {
-     "data": {
-      "text/plain": "Pipeline(memory=None,\n         steps=[('clf', <clf.c45.C45 object at 0x000001C243DE8C18>)],\n         verbose=False)"
-     },
-     "execution_count": 259,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Import things\n",
     "from sklearn.model_selection import cross_validate\n",
@@ -193,154 +196,134 @@
     "df = import_data('../Bagian C/datasets/iris.csv',',')\n",
     "x, y = extract_feature_target(df, ' species')\n",
     "\n",
+    "input_layer = len(list(x))\n",
+    "output_layer = len(set(y))\n",
+    "hidden_layer = [4, 3]\n",
+    "\n",
     "# Create MyC45\n",
     "myc45 = C45()\n",
     "myc45.label = list(x.columns)\n",
-    "myclf = MyMlp(input_layer, hidden_layer, output_layer, epochs=2500, learning_rate=0.02)\n",
     "x_temp = process_numeric(np.vectorize(str)(x.values), y.values)\n",
     "\n",
     "pipeline = Pipeline([\n",
     "    ('clf', myc45)\n",
-    "])\n",
-    "\n",
-    "pipeline.set_params(clf = classifier)"
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 260,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "100.0%\n100.0%\n100.0%\n20.0%\n0.0%\n0.0%\n40.0%\n0.0%\n0.0%\n0.0%\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "dtl_cross_validate = cross_validate(pipeline, x_temp, y.values, cv=10, scoring='accuracy')\n",
-    "for ts in dtl_cross_validate['test_score'] :\n",
-    "    print(str(ts*100)+'%')"
+    "\n",
+    "for key, values in dtl_cross_validate.items():\n",
+    "        print(key,' mean ', values.mean())\n",
+    "        print(key,' std ', values.std())"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "## 2.2 Pembelajaran ANN"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 261,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": "Pipeline(memory=None,\n         steps=[('clf', <clf.c45.C45 object at 0x000001C243DE8C18>)],\n         verbose=False)"
-     },
-     "execution_count": 261,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "pipeline = Pipeline([\n",
-    "    ('clf', myclf)\n",
-    "])\n",
+    "myMLP = MyMlp(input_layer, hidden_layer, output_layer, epochs=1000, learning_rate=0.5)\n",
     "\n",
-    "pipeline.set_params(clf = classifier)"
+    "pipeline = Pipeline([\n",
+    "    ('clf', myMLP)\n",
+    "])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 262,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "100.0%\n100.0%\n100.0%\n20.0%\n0.0%\n0.0%\n40.0%\n0.0%\n0.0%\n0.0%\n"
-    }
-   ],
+   "outputs": [],
    "source": [
-    "ann_cross_validate = cross_validate(pipeline, x_temp, y.values, cv=10, scoring='accuracy')\n",
-    "for ts in dtl_cross_validate['test_score'] :\n",
-    "    print(str(ts*100)+'%')"
+    "ann_cross_validate = cross_validate(pipeline, x.values, y.values, cv=10, scoring='accuracy')\n",
+    "\n",
+    "for key, values in ann_cross_validate.items():\n",
+    "        print(key,' mean ', values.mean())\n",
+    "        print(key,' std ', values.std())"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Bagian 3 : Penyimpanan dan Pemanggilan Model"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "## 3.1 Menyimpan Model dalam file .txt"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "## 3.2 Memanggil Model "
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Bagian 4 : Analisis Eksperimen Bagian 1 & 2"
    ]
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Test"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 263,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "Import Berhasil\nBanyaknya baris dan kolom (150, 5)\nBanyaknya data duplicate 3\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df = import_data('../Bagian C/datasets/iris.csv',',')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 264,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/html": "<div>\n<style scoped>\n    .dataframe tbody tr th:only-of-type {\n        vertical-align: middle;\n    }\n\n    .dataframe tbody tr th {\n        vertical-align: top;\n    }\n\n    .dataframe thead th {\n        text-align: right;\n    }\n</style>\n<table border=\"1\" class=\"dataframe\">\n  <thead>\n    <tr style=\"text-align: right;\">\n      <th></th>\n      <th>sepal_length</th>\n      <th>sepal_width</th>\n      <th>petal_length</th>\n      <th>petal_width</th>\n      <th>species</th>\n    </tr>\n  </thead>\n  <tbody>\n    <tr>\n      <th>0</th>\n      <td>5.1</td>\n      <td>3.5</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>setosa</td>\n    </tr>\n    <tr>\n      <th>1</th>\n      <td>4.9</td>\n      <td>3.0</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>setosa</td>\n    </tr>\n    <tr>\n      <th>2</th>\n      <td>4.7</td>\n      <td>3.2</td>\n      <td>1.3</td>\n      <td>0.2</td>\n      <td>setosa</td>\n    </tr>\n    <tr>\n      <th>3</th>\n      <td>4.6</td>\n      <td>3.1</td>\n      <td>1.5</td>\n      <td>0.2</td>\n      <td>setosa</td>\n    </tr>\n    <tr>\n      <th>4</th>\n      <td>5.0</td>\n      <td>3.6</td>\n      <td>1.4</td>\n      <td>0.2</td>\n      <td>setosa</td>\n    </tr>\n  </tbody>\n</table>\n</div>",
-      "text/plain": "   sepal_length   sepal_width   petal_length   petal_width  species\n0           5.1           3.5            1.4           0.2   setosa\n1           4.9           3.0            1.4           0.2   setosa\n2           4.7           3.2            1.3           0.2   setosa\n3           4.6           3.1            1.5           0.2   setosa\n4           5.0           3.6            1.4           0.2   setosa"
-     },
-     "execution_count": 264,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "df.head()"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 265,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -349,7 +332,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 266,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -382,14 +365,16 @@
   },
   {
    "cell_type": "markdown",
+   "execution_count": null,
    "metadata": {},
+   "outputs": [],
    "source": [
     "# Machine Learning Pipeline"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 267,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -401,15 +386,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 268,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "4\n3\n[4, 3]\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "input_layer = len(list(x))\n",
     "print(input_layer)\n",
@@ -421,7 +400,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 269,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -432,15 +411,9 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 270,
+   "execution_count": null,
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": "[['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '> 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['<= 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '<= 1.9' '<= 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['<= 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['<= 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']\n ['> 4.9' '<= 3.8' '> 1.9' '> 0.6']]\n---------------------------------\n<clf.c45.C45 object at 0x000001C243694588>\n-----------------------------------\nfit_time  mean  0.011585426330566407\nfit_time  std  0.0026555270534793537\nscore_time  mean  0.0010622501373291015\nscore_time  std  0.0006707116208901099\ntest_score  mean  0.3820689655172414\ntest_score  std  0.3811641221186584\n{'fit_time': array([0.01676011, 0.01027751, 0.00990462, 0.01137471, 0.00961018]), 'score_time': array([0.00120449, 0.00100136, 0.00099778, 0.00210762, 0.        ]), 'test_score': array([1.        , 0.6       , 0.        , 0.31034483, 0.        ])}\n"
-    }
-   ],
+   "outputs": [],
    "source": [
     "from sklearn.linear_model import LogisticRegression\n",
     "pipeline = Pipeline([\n",
